--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^2.5.1",
     "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.12.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -24,6 +26,7 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
+    "baseline-browser-mapping": "^2.9.10",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
