--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@preact/signals": "^2.5.1",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.12.1",
+    "gsap": "^3.14.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^4.11.0",
