--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.12.1",
+    "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^7.9.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.13",
     "zustand": "^5.0.8"
   },
