--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "@preact/signals": "^2.5.1",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.90.12",
+    "appwrite": "^22.0.0",
     "axios": "^1.12.1",
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.13",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
